apps/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: (Host(`${HL_FQDN_DOMAIN}`) && PathPrefix(`/dashboard`)) || PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: default-test-auth@kubernetescrd
  tls:
    certResolver: le
